// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProjectCard matches snapshot for a fully-funded project 1`] = `
<div>
  <div
    class="relative group"
  >
    <a
      href="/projects/proj-1"
    >
      <div
        class="card-hover group animate-fade-in flex flex-col h-full relative overflow-hidden"
      >
        <div
          class="flex items-center justify-between mb-4"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-10 h-10 rounded-xl bg-[rgba(99,102,241,0.08)] dark:bg-[rgba(129,140,248,0.10)] flex items-center justify-center text-xl border border-[rgba(99,102,241,0.12)] dark:border-[rgba(129,140,248,0.15)]"
            >
              🌳
            </div>
            <div>
              <p
                class="text-xs text-[#475569] dark:text-[#94A3B8] font-body"
              >
                Reforestation
              </p>
              <p
                class="text-xs text-[#64748B] dark:text-[#64748B] font-body"
              >
                Brazil
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <span
              class="badge text-xs px-3 py-1 rounded-full bg-gradient-to-r from-emerald-500 to-emerald-600 text-white border-2 border-white shadow-md font-body font-bold"
            >
              ✅ Fully Funded
            </span>
          </div>
        </div>
        <h3
          class="font-display font-semibold text-[#0F172A] dark:text-[#E2E8F0] text-base leading-snug mb-2 group-hover:text-[#4F46E5] dark:group-hover:text-[#818CF8] transition-colors line-clamp-2"
        >
          Amazon Reforestation Initiative
        </h3>
        <p
          class="text-[#475569] dark:text-[#94A3B8] text-sm leading-relaxed line-clamp-3 mb-4 flex-1 font-body"
        >
          Restoring native tree cover across degraded rainforest land.
        </p>
        <div
          class="mb-4"
        >
          <div
            class="bg-gradient-to-r from-green-500 to-emerald-600 text-white px-4 py-2 rounded-lg text-center text-sm font-semibold shadow-sm"
          >
            ✅ Fully Funded
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-3 border-t border-[rgba(99,102,241,0.07)] dark:border-[rgba(129,140,248,0.07)]"
        >
          <div
            class="flex items-center gap-3 text-xs text-[#475569] dark:text-[#94A3B8] font-body"
          >
            <span>
              👥 
              42
               donors
            </span>
            <span
              class="flex items-center gap-1"
            >
              ♻️ 
              1.2k kg CO₂
              <span
                class="tooltip"
              >
                <button
                  aria-label="CO2 offset estimate methodology info"
                  class="w-3.5 h-3.5 flex items-center justify-center rounded-full bg-[rgba(99,102,241,0.08)] text-[8px] text-[#4F46E5] dark:text-[#818CF8] border border-[rgba(99,102,241,0.15)] hover:bg-[rgba(99,102,241,0.15)] transition-colors focus:outline-none focus:ring-1 focus:ring-[#4F46E5]"
                  type="button"
                >
                  ℹ️
                </button>
                <span
                  class="tooltip-text"
                  role="tooltip"
                >
                  Estimated CO₂ offset based on this project's declared impact rate per XLM donated. Actual results may vary.
                </span>
              </span>
            </span>
          </div>
          <span
            class="text-xs font-semibold text-[#4F46E5] dark:text-[#818CF8] font-body group-hover:text-[#6366F1]"
          >
            Donate →
          </span>
        </div>
      </div>
    </a>
    <button
      aria-label="Add to wishlist"
      class="absolute top-4 right-4 p-2.5 rounded-xl border transition-all duration-300 transform hover:scale-110 active:scale-95 z-20 shadow-sm bg-white/90 text-forest-300 border-forest-100 hover:text-red-400 hover:border-red-100 opacity-0 group-hover:opacity-100"
      type="button"
    >
      <svg
        class="w-5 h-5 transition-all duration-300 fill-none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`ProjectCard matches snapshot for an active, partially-funded project 1`] = `
<div>
  <div
    class="relative group"
  >
    <a
      href="/projects/proj-1"
    >
      <div
        class="card-hover group animate-fade-in flex flex-col h-full relative overflow-hidden"
      >
        <div
          class="flex items-center justify-between mb-4"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-10 h-10 rounded-xl bg-[rgba(99,102,241,0.08)] dark:bg-[rgba(129,140,248,0.10)] flex items-center justify-center text-xl border border-[rgba(99,102,241,0.12)] dark:border-[rgba(129,140,248,0.15)]"
            >
              🌳
            </div>
            <div>
              <p
                class="text-xs text-[#475569] dark:text-[#94A3B8] font-body"
              >
                Reforestation
              </p>
              <p
                class="text-xs text-[#64748B] dark:text-[#64748B] font-body"
              >
                Brazil
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <span
              class="badge-verified text-xs px-2 py-0.5 font-body"
            >
              ✓ Verified
            </span>
            <span
              class="badge-active"
            >
              Active
            </span>
          </div>
        </div>
        <h3
          class="font-display font-semibold text-[#0F172A] dark:text-[#E2E8F0] text-base leading-snug mb-2 group-hover:text-[#4F46E5] dark:group-hover:text-[#818CF8] transition-colors line-clamp-2"
        >
          Amazon Reforestation Initiative
        </h3>
        <p
          class="text-[#475569] dark:text-[#94A3B8] text-sm leading-relaxed line-clamp-3 mb-4 flex-1 font-body"
        >
          Restoring native tree cover across degraded rainforest land.
        </p>
        <div
          class="mb-4"
        >
          <div
            class="space-y-2"
          >
            <div
              class="w-full"
            >
              <div
                class="mb-2 flex items-center justify-between gap-3"
              >
                <span
                  class="text-sm font-semibold text-[#4F46E5] dark:text-[#818CF8]"
                >
                  25%
                </span>
                <span
                  class="text-xs text-[#475569] dark:text-[#94A3B8]"
                >
                  2,500
                   / 
                  10,000
                   XLM
                </span>
              </div>
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="25"
                aria-valuetext="25% complete"
                class="h-2.5 w-full overflow-hidden rounded-full bg-[rgba(99,102,241,0.08)] dark:bg-[rgba(129,140,248,0.10)]"
                role="progressbar"
              >
                <div
                  class="h-full rounded-full bg-gradient-to-r from-[#4F46E5] to-[#7C3AED] transition-all duration-500"
                  style="width: 25%;"
                />
              </div>
            </div>
            <div
              class="flex items-center justify-between text-[11px] text-[#8aaa8a] font-body"
            >
              <span>
                2,500 XLM
                 raised
              </span>
              <span>
                Goal: 10,000 XLM
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-between pt-3 border-t border-[rgba(99,102,241,0.07)] dark:border-[rgba(129,140,248,0.07)]"
        >
          <div
            class="flex items-center gap-3 text-xs text-[#475569] dark:text-[#94A3B8] font-body"
          >
            <span>
              👥 
              42
               donors
            </span>
            <span
              class="flex items-center gap-1"
            >
              ♻️ 
              1.2k kg CO₂
              <span
                class="tooltip"
              >
                <button
                  aria-label="CO2 offset estimate methodology info"
                  class="w-3.5 h-3.5 flex items-center justify-center rounded-full bg-[rgba(99,102,241,0.08)] text-[8px] text-[#4F46E5] dark:text-[#818CF8] border border-[rgba(99,102,241,0.15)] hover:bg-[rgba(99,102,241,0.15)] transition-colors focus:outline-none focus:ring-1 focus:ring-[#4F46E5]"
                  type="button"
                >
                  ℹ️
                </button>
                <span
                  class="tooltip-text"
                  role="tooltip"
                >
                  Estimated CO₂ offset based on this project's declared impact rate per XLM donated. Actual results may vary.
                </span>
              </span>
            </span>
          </div>
          <span
            class="text-xs font-semibold text-[#4F46E5] dark:text-[#818CF8] font-body group-hover:text-[#6366F1]"
          >
            Donate →
          </span>
        </div>
      </div>
    </a>
    <button
      aria-label="Add to wishlist"
      class="absolute top-4 right-4 p-2.5 rounded-xl border transition-all duration-300 transform hover:scale-110 active:scale-95 z-20 shadow-sm bg-white/90 text-forest-300 border-forest-100 hover:text-red-400 hover:border-red-100 opacity-0 group-hover:opacity-100"
      type="button"
    >
      <svg
        class="w-5 h-5 transition-all duration-300 fill-none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`ProjectCard matches snapshot for the loading skeleton 1`] = `
<div>
  <div
    class="card animate-pulse pointer-events-none select-none flex flex-col h-full border border-forest-200 shadow-none border-[rgba(34,114,57,0.06)]"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="animate-pulse pointer-events-none select-none w-10 h-10 rounded-full bg-forest-100 border border-forest-200 "
        />
        <div
          class="space-y-1.5"
        >
          <div
            class="animate-pulse pointer-events-none select-none bg-forest-100 h-2.5 rounded-full w-16"
          />
          <div
            class="animate-pulse pointer-events-none select-none bg-forest-100 h-2 rounded-full w-20"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-1.5"
      >
        <div
          class="animate-pulse pointer-events-none select-none h-5 rounded-full w-16 bg-forest-50 "
        />
        <div
          class="animate-pulse pointer-events-none select-none h-5 rounded-full w-16 bg-forest-50 w-12"
        />
      </div>
    </div>
    <div
      class="space-y-2 mb-5 flex-1"
    >
      <div
        class="animate-pulse pointer-events-none select-none h-3 rounded-full w-3/4 bg-forest-100"
      />
      <div
        class="animate-pulse pointer-events-none select-none h-3 rounded-full w-1/2 bg-forest-50"
      />
      <div
        class="animate-pulse pointer-events-none select-none h-3 rounded-full w-2/3 bg-forest-100"
      />
    </div>
    <div
      class="mb-5"
    >
      <div
        class="flex justify-between mb-2"
      >
        <div
          class="animate-pulse pointer-events-none select-none h-2 rounded-full w-1/4 bg-forest-50"
        />
        <div
          class="animate-pulse pointer-events-none select-none h-2 rounded-full w-1/3 bg-forest-50"
        />
      </div>
      <div
        class="animate-pulse pointer-events-none select-none h-2.5 rounded-full w-full bg-forest-100"
      />
    </div>
    <div
      class="flex items-center justify-between pt-3 border-t border-forest-200"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="animate-pulse pointer-events-none select-none bg-forest-100 h-3 rounded-full w-14"
        />
        <div
          class="animate-pulse pointer-events-none select-none bg-forest-100 h-3 rounded-full w-16"
        />
      </div>
      <div
        class="animate-pulse pointer-events-none select-none bg-forest-100 h-3 rounded-full w-12"
      />
    </div>
  </div>
</div>
`;
